mdapipkg/objects/Dataset__c.object
<CustomObject>
    <fields>
        <fullName>DatasetId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DatasetId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Json__c</fullName>
        <label>Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Datasets</relationshipLabel>
        <relationshipName>Datasets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF(CONTAINS(UPPER(Name), &quot;ROUTE&quot;), &quot;ROUTE&quot;, IF(CONTAINS(UPPER(Name), &quot;SECTIONS&quot;), &quot;SECTIONS&quot;, IF(CONTAINS(UPPER(Name), &quot;TERRYTORY&quot;), &quot;TERRYTORY&quot;, IF(CONTAINS(UPPER(Name), &quot;NON SERVICE&quot;), &quot;NON SERVICE&quot;, IF(CONTAINS(UPPER(Name), &quot;UNDERLAY&quot;), &quot;UNDERLAY&quot;, &quot;NO TYPE&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isNonService__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNonService</label>
        <type>Checkbox</type>
    </fields>
    <label>Dataset</label>
    <nameField>
        <label>Dataset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Datasets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>